tdf#126051 sync MINBODY copies to same value

Change-Id: Id41da7b07dcb25e820e5fd20aed595b1170fa204