cui/source/tabpages/page.cxx
@@ -61,7 +61,8 @@
 
 // static ----------------------------------------------------------------
 
-static const long MINBODY       = 284;  // 0,5 cm rounded up in twips
+// #i19922# - tdf#126051 see svx/source/dialog/hdft.cxx and sw/source/uibase/sidebar/PageMarginControl.hxx
+static const long MINBODY = 56;  // 1mm in twips rounded
 
 const sal_uInt16 SvxPageDescPage::pRanges[] =
 {
